# pyattender_zoom

./: .env  .env.archive  .env.example  .gitignore  Dockerfile  README.md  attendance_processor.py  attendance_queue.py  config.py  docker-compose.yml  exceptions.py  main.py  notes  pyAttender.py  pyproject.toml  requirements.txt  vector_store.py  webhookFormats.txt  webhook_manager.py  zoom_attendance.py
ref_scripts/: WH_Sender.py  pyAttender.py
