[project]
name = "pyattender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "fastapi[standard]>=0.115.8",
    "openpyxl>=3.1.5",
    "pathlib>=1.0.1",
    "pendulum>=3.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
]
